--- a/application.json
+++ b/application.json
@@ -7,6 +7,14 @@
     {
       "id": "Page1",
       "isDefault": true
+    },
+    {
+      "id": "Page1 Copy",
+      "isDefault": false
+    },
+    {
+      "id": "Employees Copy",
+      "isDefault": false
     }
   ],
   "viewMode": false,
