--- a/application.json
+++ b/application.json
@@ -15,6 +15,14 @@
     {
       "id": "Employees Copy",
       "isDefault": false
+    },
+    {
+      "id": "Page1 Copy1",
+      "isDefault": false
+    },
+    {
+      "id": "Employees Copy Copy",
+      "isDefault": false
     }
   ],
   "viewMode": false,
