--- a/application.json
+++ b/application.json
@@ -23,6 +23,10 @@
     {
       "id": "Employees Copy Copy",
       "isDefault": false
+    },
+    {
+      "id": "Page1 Copy1 Copy",
+      "isDefault": false
     }
   ],
   "viewMode": false,
