--- a/application.json
+++ b/application.json
@@ -27,6 +27,10 @@
     {
       "id": "Page1 Copy1 Copy",
       "isDefault": false
+    },
+    {
+      "id": "Page1 Copy1 Copy Copy",
+      "isDefault": false
     }
   ],
   "viewMode": false,
